--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -117,6 +117,24 @@ header {
   font-size: 9pt;
 }
 
+.subHeaderPaused {
+  position: fixed;
+  cursor: pointer;
+  z-index: 1000;
+  top: 88px;
+  left: 0;
+  height: 72px !important;
+  width: 100%;
+  background-color: #f3f2f1;
+  margin: 0px;
+  color: #38393d;
+  vertical-align: middle;
+  text-align: left;
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 9pt;
+}
+
 footer {
   position: fixed;
   left: 0px;
@@ -237,6 +255,7 @@ h4 {
   top: 90px;
   width: 100%;
   height: auto;
+  min-height: 400px;
   overflow-x: hidden;
   overflow-y: auto;
   text-align: justify;
@@ -247,7 +266,7 @@ h4 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  width: 280px;
+  width: 300px;
   /* Beginning of string */
   direction: rtl;
   text-align: left;
@@ -260,5 +279,47 @@ h4 {
   overflow: hidden;
   text-overflow: ellipsis;
   width: 230px;
+}
+
+.dropdown-menu {
+  position: relative;
+  display: inline-block;
+  padding-top: 130px;
+  text-align: center;
+  display: contents;
+}
+
+.menu-content {
+  z-index: 1000;
+  position: absolute;
+  bottom: 75%;
+  right: 28px;
+  border: 1px solid black;
+  background-color: #f3f2f1;
+  text-align: left;
+}
+
+.links {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-size: 12px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: lighter;
+  text-decoration: none;
+}
+
+.links:hover {
+  background-color: #cecece;
+  text-decoration: none;
+}
+
+.dropdown-menu:hover .menu-content {
+  display: block;
+}
+
+.dropdown-menu:hover {
+  background-color: #e2e2e2;
 }
 /*# sourceMappingURL=main.css.map */
